tests/TypeValidationTests/data/DuplicateCaseTest.xpl
node[] main() {
  integer x = 1;

  switch (x) {
  case 1: break;
  case 2: break;
  case 1: break;
  }

  string s = "hello";

  switch (s) {
  case "hello": break;
  case "world": break;
  case "hello": break;
  case "hello": break;
  case "world": break;
  }
}
